# baipiaogpt-client

./: .gitattributes  README.md  README_zh-hans.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  index.styl  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_key.rs  headers.rs  lib.rs  macros.rs  main.rs  messages.rs  models.rs  services.rs
src/components/: Dialog.vue  DialogItem.vue  Footer.vue  Header.vue  MainMenu.vue
src/store/: useChatStore.ts  useThemeStore.ts
src/utils/: presetQuestions.ts
