[package]
name = "baipiaogpt-client"
version = "1.0.0"
description = "白嫖GPT"
authors = ["Vincent-the-gamer"]
license = ""
repository = ""
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
